--- a/mgr-benchmark/pom.xml
+++ b/mgr-benchmark/pom.xml
@@ -17,7 +17,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.pielat</groupId>
-    <artifactId>mgr-examples</artifactId>
+    <artifactId>mgr-benchmark</artifactId>
     <version>1.0</version>
 
     <dependencies>
