--- a/mgr-benchmark/pom.xml
+++ b/mgr-benchmark/pom.xml
@@ -68,10 +68,17 @@
             <artifactId>jcommander</artifactId>
             <version>1.72</version>
         </dependency>
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.11.1</version>
         </dependency>
     </dependencies>
 
